[package]
name = "lsp-client"
version = "0.1.0"
authors = ["The0x539 <the0x539@gmail.com>"]
edition = "2018"

[lib]
name = "lsp_client"
path = "src/lib.rs"

[[bin]]
name = "lsp_client"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.36"
either = "1.6.1"
futures = "0.3.8"
lsp-types = "0.86.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
thiserror = "1.0.23"
tokio = { version = "1.0.1", features = ["macros", "process", "rt", "io-util", "sync"] }
